# spotify-genius

./: README.md  pyproject.toml  requirements.txt  spotify-genius.py
.github/workflows/: build.yml
src/spotify_genius/: __init__.py  main.py
src/spotify_genius/core/: __init__.py  genius.py  utils.py
tests/: test_genius.py
